[package]
name = "edit-roblox-place"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = [
    "cargo",
    "color",
    "suggestions",
    "wrap_help",
] }
confy = "0.4.0"
opener = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
